Added bootstrap scss

--- a/application/source/templates/partials/footer.html
+++ b/application/source/templates/partials/footer.html
@@ -1,5 +1,5 @@
-<footer>
-	<div class="container-fluid">
-		<h5>footer</h5>
+<footer class="footer">
+	<div class="container">
+		<p class="text-muted">&copy; 2017</p>
 	</div>
 </footer>
