--- a/application/source/assets/stylesheets/layout/_footer.scss
+++ b/application/source/assets/stylesheets/layout/_footer.scss
@@ -1,3 +1,11 @@
-footer {
-    background-color: #f5f5f5;
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #f5f5f5;
+
+  p {
+  	padding-top: 20px;
+  }
 }
