--- a/application/source/assets/stylesheets/style.scss
+++ b/application/source/assets/stylesheets/style.scss
@@ -2,7 +2,10 @@
 //@import "base/_normalize";
 @import "base/_reset";
 
-@import "_sprites";
+// Bootstrap can be removed entirely by deleting this line.
+@import "bootstrap/bootstrap";
+
+//@import "_sprites";
 
 // Mixins
 @import "mixins/font-face";
